# ease-training

./: README.md
easetraining/: Cargo.toml
easetraining/src/: lib.rs
easetraining/src/acmd_aerial_fix/: mod.rs
easetraining/src/macro_input_version/: mod.rs
easetraining/src/macro_status_version/: mod.rs
easetraining/src/training/: mod.rs
easetraining_smashline/: Cargo.toml
easetraining_smashline/src/: config.rs  lib.rs
easetraining_smashline/src/input/: mod.rs
easetraining_smashline/src/macro_status_version/: mod.rs
easetraining_smashline/src/training/: mod.rs
